services/image-blur/kubernetes/image-blur.stateful.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  # This name uniquely identifies the stateful set
  name: image-blur-stateful
  labels:
    app: image-blur
spec:
  serviceName: image-blur
  replicas: 1
  selector:
    matchLabels:
      app: image-blur
  template:
    metadata:
      labels:
        app: image-blur
    spec:
      containers:
      - name: image-blur
        image: ghcr.io/swiss-ai-center/image-blur:latest
        # If you build the image locally, change the next line to `imagePullPolicy: Never` - there is no need to pull the image
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
