services/image-blur/kubernetes/image-blur.service.yml
apiVersion: v1
kind: Service
metadata:
  name: image-blur-service
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 8888
      targetPort: 80
      protocol: TCP
  selector:
    app: image-blur
